labs/kube/05-routing-apis/gis-test1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test1-ns
---
apiVersion: v1
kind: Service
metadata:
  #name: test1-sidecar-svc
  name: test1-ambassador-svc
  namespace: test1-ns
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 6000
    #targetPort: 5000
    targetPort: 80
  selector:
    app: gis-security-sidecar
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test1-sidecar
  namespace: test1-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gis-security-sidecar
    spec:
      serviceAccountName: test1-sa
      containers:
      - name: gis-security-sidecar
        image: locactus/gis-security-sidecar
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
        #- containerPort: 5000
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  #name: test1-api-svc
  name: test1-svc
  namespace: test1-ns
spec:
  type: ClusterIP
  ports:
  - name: http
    #port: 6001
    port: 5050
    targetPort: 5001
  selector:
    app: gis-test-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test1-api
  namespace: test1-ns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gis-test-api
    spec:
      serviceAccountName: test1-sa
      containers:
      - name: gis-test-api
        image: locactus/gis-test-api
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
        - containerPort: 5001

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test1-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
  namespace: test1-ns
spec:
  rules:
  - http:
      paths:
      - path: /endpoint/payment-init/make-payment
        backend:
          serviceName: test1-ambassador-svc
          servicePort: 6000
---
